	* Fix bug #41321: Clicking cancel on the account deletion confirmation pages causes a 404 error with internet explorer
	* Fix bug #46429: Empty Form after cancelling delete Form
	* Fix issue #49426: addGlobalMarkers: wrong conditions
	* Fix issue #37022: Empty form security token
	* Fix issue #39069: Check pid of fe-users in function login (Thanks to Georg Schönweger)

2016-06-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #46080: BE log error after change PHP5.2 -> PHP5.3
	* Fix bug #41799: Title in fe_groups_language_overlay is too short

2016-06-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert Revision 67451: Do not expose autologin private key

2016-06-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert Revision 66556: Require saltedpasswords to be installed
	* Revert Revision 66559: Require felogin, rsaauth and saltedpasswords
	* Revert Revision 66567: Always check for required rsaauth
	* Fix t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data

2013-04-02 Franz Holzinger  <franz@ttproducts.de>
	* replace PHP constant SR_FEUSER_REGISTER_EXTkey by SR_FEUSER_REGISTER_EXT
	* remove constants from div2007

2013-03-16 Franz Holzinger  <franz@ttproducts.de>
	* new feature: control the user group generation by comparing of the entries in a XML file

2013-02-19 Franz Holzinger  <franz@ttproducts.de>
	* support for DirectMail fields even if it is not installed any more

2012-10-27 Franz Holzinger  <franz@ttproducts.de>
	* use global $GLOBALS['TCA'][$theTable] instead of internal $this->TCA variable

2012-10-26 Franz Holzinger  <franz@ttproducts.de>
	* replace auto_login_key from dataArray into its own variable

2012-10-22 Franz Holzinger  <franz@ttproducts.de>
	* restructuring

2012-10-18 Franz Holzinger  <franz@ttproducts.de>
	* Fix bug: Do not continue if the saving of the user data went wrong

2012-10-15 Franz Holzinger  <franz@ttproducts.de>
	* new feature: house_no which contains the house number for the given street