@@ -6,6 +6,7 @@
 	* Fix issue #49426: addGlobalMarkers: wrong conditions
 	* Fix issue #37022: Empty form security token
 	* Fix issue #39069: Check pid of fe-users in function login (Thanks to Georg Schönweger)
+	* Fix issue with confirmType in setfixed url
 
 2016-06-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #46080: BE log error after change PHP5.2 -> PHP5.3
